Robotics/.metadata/.plugins/org.eclipse.cdt.ui/timedTest.build.log
19:25:17 **** Rebuild of configuration Debug for project timedTest ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\ankbh/wpilib/cpp/current/include" "-IC:\\Users\\ankbh\\Robotics\\timedTest\\src" "-IC:\\Users\\ankbh/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Robot.o" "..\\src\\Robot.cpp" 
In file included from C:\Users\ankbh/wpilib/cpp/current/include/SensorBase.h:12:0,
                 from C:\Users\ankbh/wpilib/cpp/current/include/SmartDashboard/SmartDashboard.h:16,
                 from ..\src\Robot.cpp:13:
C:\Users\ankbh/wpilib/cpp/current/include/Base.h:11:1: error: static assertion failed: GCC must be 5 or greater. If building for the roboRIO, please update to the 2018 toolchains.
 static_assert(0,
 ^

19:25:18 Build Finished (took 1s.345ms)

